# power_quant_strategies

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml
src/power_quant_strategies/application/mains/: main_train_walk_forward.py  main_tune_hyperparameter.py
src/power_quant_strategies/application/settings/: models.py
src/power_quant_strategies/models/: arima.py  lstm.py
src/power_quant_strategies/utils/evaluate_model/: check_model_score_vs_spread_dependency.py  evaluate_classification_metrics.py  evaluate_trading_metrics.py  evaluate_trading_plots.py
src/power_quant_strategies/utils/fit_model/: calculate_spread_realized_and_expected.py  find_optimal_threshold_and_maximum_pnl.py
src/power_quant_strategies/utils/fit_model/fit_xgboost/: fit_xgboost.py  fit_xgboost_walk_forward.py  tune_hyperparameter_xgboost.py
src/power_quant_strategies/utils/helper/: get_usable_cpu_count.py  remove_nans.py  setup_logging.py  shorten_path.py
