[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "power-quant-strategies"
version = "0.1.0"
description = "Quantitative trading strategies for electricity markets using machine learning, optimization, and statistical modeling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Minho Kang" }
]
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1.0",
    "statsmodels>=0.14.6",
    "torch>=2.2,<3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
