[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "power-quant-strategies"
version = "0.1.0"
description = "Quantitative trading strategies for electricity markets using machine learning, optimization, and statistical modeling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Minho Kang" }
]
dependencies = [
    "colorlog>=6.10.1",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=1.26,<3.0",
    "openpyxl>=3.1.5",
    "optuna>=4.9.0",
    "pandas>=2.1.0",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.2,<3.0",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
